--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <body>
   <h1>TP 1 : Pierre HUET </h1>
-  <h2><b>J'espère</b> qu'on va percer dans le game FRERE</h2>
+  <h2>jujn</h2>
   
 </body>
 </html>
