--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <html>
 <head>
 <title> Electif IF </title>
+<link rel="stylesheet" type="text/css" href="style.css">
 
 </head>
 
 <body>
   <h1>TP 1 : Pierre HUET </h1>
-  <h2>jujn</h2>
+  <h2>juin <br>jfijefjri</br></h2>
   
 </body>
 </html>
